--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
+  font-family: Oswald;
 }
 
 .app_container {
@@ -25,6 +25,7 @@
 
 .app-header-menu {
   min-width: 30%;
+  font-family: Oswald;
 }
 
 .ant-menu-light.ant-menu-horizontal > .ant-menu-item-selected::after {
