--- a/src/components/ShopIcon/ShopIcon.scss
+++ b/src/components/ShopIcon/ShopIcon.scss
@@ -5,6 +5,11 @@
   justify-content: space-between;
   margin-left: 5px;
   cursor: pointer;
+  font-family: Roboto;
+  svg{
+    color: #FFF;
+    font-size: 1.5em;
+  }
 }
 
 .shop-icon-content {
@@ -14,12 +19,9 @@
 
   p {
     color: #FFF;
-    font-family: Roboto Medium;
+    font-family: Roboto;
     font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 250% */
-    letter-spacing: 0.12px;
+    line-height: 1em;
     display: flex;
     align-items: start;
     justify-content: start;
