--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -10,7 +10,7 @@
   background: linear-gradient(90deg, #F6F8FC 0%, #F6F8FC 44.79%, #F5F7FA 74.48%, rgba(243, 239, 238, 0.00) 100%);
   width: 70%;
   z-index: 3;
-  position: relative; /* Додайте позиціонування */
+  position: relative;
   left: 15%;
   display: flex;
   flex-direction: row;
@@ -44,7 +44,6 @@
     background-color: inherit;
     cursor: pointer;
     color: #000;
-    /* Oswald Medium 18 AA */
     font-family: Oswald;
     font-size: 18px;
     text-transform: uppercase;
@@ -52,8 +51,8 @@
 }
 
 .banner-img {
-  z-index: 1; /* Змініть з-index на від'ємне значення */
-  position: relative; /* Додайте позиціонування */
+  z-index: 1;
+  position: relative;
   width: 50%;
 }
 
