--- a/src/App.scss
+++ b/src/App.scss
@@ -130,7 +130,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  font-family: Oswald;
   svg{
-
+    stroke-width: 1;
   }
 }
