--- a/src/components/ProductPagePhoto/ProductPagePhoto.scss
+++ b/src/components/ProductPagePhoto/ProductPagePhoto.scss
@@ -6,6 +6,10 @@
   img {
     cursor: pointer;
     width: 100%;
+
+    &:hover {
+      border: 1px solid var(--divider, #C4C4C4);
+    }
   }
 }
 
