--- a/src/pages/ProductPage/ProductPage.scss
+++ b/src/pages/ProductPage/ProductPage.scss
@@ -34,3 +34,14 @@
   justify-content: center;
   align-items: center;
 }
+.product-page-property-link {
+  color: var(--link, #0F6DB1);
+  font-family: Roboto;
+  cursor: pointer;
+  text-decoration-line: underline;
+
+}
+
+.product-page-property-link:hover {
+  color: #D0E4F2;
+}
